@@ -1,3 +1,10 @@
+2020-07-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/libs.R: Minor tweaks to defaults and messages
+
+	* inst/rawdata/20.04/: Added
+	* inst/extdata/libContents-amd64.20.04.gz: Idem
+
 2020-05-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Expanded description
